# push_swap

./: .Makefile.swp  CMakeLists.txt  Makefile  checker  checker.c  checker.h  errorstempfile.txt  execute.c  executeRest.c  execute_rest.c  generaye_sample.c  get_next_line.c  heap_sort.c  lst_arr_functions.c  lst_functions.c  nb_execute.c  nb_lst.c  push_swap  push_swap.c  push_swap.h  read_input.c  suportFunctions.c  test.sh  validation.c
include/: checker.h  conversions.h  execute.h  ft_printf.h  get_next_line.h  large_arythmetics.h  libft.h  push_swap.h
src/: Makefile  checker.c  core.c  execute_rest.c  free_functions.c  ft_create_elem.c  ft_lstmap.c  ft_lstnew.c  ft_strchr.c  ft_strjoin.c  heap_sort.c  lst_arr_functions.c  lst_execute.c  nb_execute.c  nb_lst.c  optimazation_functions.c  push_swap.c  read_input.c  result_comands.c  supportive_functions.c  validation.c
src/checker/: Makefile  checker.c
src/libft/: Makefile  author  ft_count_if.c  ft_create_elem.c  ft_is_int.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_lstnew.c  ft_memcpy.c  ft_memmove.c  ft_push_back.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  ft_strncpy.c  ft_strnew.c  ft_strnstr.c  ft_strsub.c  ft_strtrim.c  get_next_line.c  is_int.c
src/list/: ft_create_node.c
src/printf/: Makefile  c_conversions.c  conversion_flags.c  convert_flags.c  d_conversions.c  f_conversions.c  ft_after_num.c  ft_before_num.c  ft_printf.c  ft_strappend.c  get_conv_glags.c  get_flags.c  mmm  mod_conversions.c  o_conversions.c  p_conversions.c  print_conversion.c  s_conversion.c  u_conversion.c  x_conversions.c
src/push_swap/: nb_lst.c  push_swap.c
src/shared/: Makefile  get_next_line.c  lst_arr_functions.c  lst_execute.c  nb_execute.c  read_input.c  validation.c
src/string/: ft_lst_to_str.c  ft_realloc.c  ft_strappend.c
