cmake_minimum_required(VERSION 3.14)
project(push_in_trier)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)

add_executable(push_in_trier
        include/checker.h
        include/conversions.h
        include/execute.h
        include/float_to_str.h
        include/floats.h
        include/ft_printf.h
        include/get_next_line.h
        include/large_arythmetics.h
        include/libft.h
        include/push_swap.h
        src/checker/checker.c
        src/checker/Makefile
        src/libft/ft_any.c
        src/libft/ft_atoi.c
        src/libft/ft_bzero.c
        src/libft/ft_count_if.c
        src/libft/ft_create_elem.c
        src/libft/ft_isalnum.c
        src/libft/ft_isalpha.c
        src/libft/ft_isascii.c
        src/libft/ft_isdigit.c
        src/libft/ft_isprint.c
        src/libft/ft_itoa.c
        src/libft/ft_list_at.c
        src/libft/ft_lstadd.c
        src/libft/ft_lstdel.c
        src/libft/ft_lstdelone.c
        src/libft/ft_lstiter.c
        src/libft/ft_lstmap.c
        src/libft/ft_lstnew.c
        src/libft/ft_memalloc.c
        src/libft/ft_memccpy.c
        src/libft/ft_memchr.c
        src/libft/ft_memcmp.c
        src/libft/ft_memcpy.c
        src/libft/ft_memdel.c
        src/libft/ft_memmove.c
        src/libft/ft_memset.c
        src/libft/ft_putchar.c
        src/libft/ft_putchar_fd.c
        src/libft/ft_putendl.c
        src/libft/ft_putendl_fd.c
        src/libft/ft_putnbr.c
        src/libft/ft_putnbr_fd.c
        src/libft/ft_putstr.c
        src/libft/ft_putstr_fd.c
        src/libft/ft_reverse.c
        src/libft/ft_strcat.c
        src/libft/ft_strchr.c
        src/libft/ft_strclr.c
        src/libft/ft_strcmp.c
        src/libft/ft_strcpy.c
        src/libft/ft_strdel.c
        src/libft/ft_strdup.c
        src/libft/ft_strequ.c
        src/libft/ft_striter.c
        src/libft/ft_striteri.c
        src/libft/ft_strjoin.c
        src/libft/ft_strlcat.c
        src/libft/ft_strlen.c
        src/libft/ft_strmap.c
        src/libft/ft_strmapi.c
        src/libft/ft_strncat.c
        src/libft/ft_strncmp.c
        src/libft/ft_strncpy.c
        src/libft/ft_strnequ.c
        src/libft/ft_strnew.c
        src/libft/ft_strnstr.c
        src/libft/ft_strrchr.c
        src/libft/ft_strsplit.c
        src/libft/ft_strstr.c
        src/libft/ft_strsub.c
        src/libft/ft_strtrim.c
        src/libft/ft_tolower.c
        src/libft/ft_toupper.c
        src/libft/get_next_line.c
        src/libft/is_int.c
        src/libft/Makefile
        src/printf/c_conversions.c
        src/printf/conversion_flags.c
        src/printf/convert_flags.c
        src/printf/d_conversions.c
        src/printf/div_10_longnum.c
        src/printf/f_conversions.c
        src/printf/float_to_str.c
        src/printf/ft_after_num.c
        src/printf/ft_before_num.c
        src/printf/ft_create_node.c
        src/printf/ft_itoa_base.c
        src/printf/ft_itoa_base_hex_long.c
        src/printf/ft_printf.c
        src/printf/get_conv_glags.c
        src/printf/get_conversion.c
        src/printf/get_first_digit.c
        src/printf/get_flags.c
        src/printf/get_sizes.c
        src/printf/large_arythmetics.c
        src/printf/make_double.c
        src/printf/make_ldouble.c
        src/printf/Makefile
        src/printf/mod_conversions.c
        src/printf/o_conversions.c
        src/printf/p_conversions.c
        src/printf/print_conversion.c
        src/printf/s_conversion.c
        src/printf/sum_longnum.c
        src/printf/u_conversion.c
        src/printf/x_conversions.c
        src/shared/heap_sort.c
        src/push_swap/nb_lst.c
        src/push_swap/push_swap.c
        src/shared/execute_rest.c
        src/shared/lst_arr_functions.c
        src/shared/Makefile
        src/shared/nb_execute.c
        src/shared/read_input.c
        src/shared/validation.c
        src/string/fill_with_chars.c
        src/string/ft_lst_to_str.c
        src/string/ft_realloc.c
        src/string/ft_strappend.c
        src/Makefile
        Makefile
        test
        test2
        test3)
